src/regression/parse_pool/progtest7.sfp.out

sfc in program parse_pool/progtest7.sfp
syntax error at line 3, position 1:
bar { timer = 8192 TYPE_SECOND }
^
